# a2a-prod

./: .dockerignore  .env.example  .gitignore  README.md  glm-code review1.md  glm-code review3.md  pyproject.toml
agents/: Dockerfile  __init__.py  base_agent.py
agents/deepseek_agent/: __init__.py  __main__.py  agent.json  agent.py  generate_card.py
agents/glm_agent/: __init__.py  __main__.py  agent.json  agent.py  generate_card.py
agents/minimax_agent/: __init__.py  __main__.py  agent.json  agent.py  generate_card.py
docs/: ARCHITECTURE.md  CODESTYLE.md  DECISIONS.md  MIGRATION.md  NORTH_STAR.md  README.md  SPEC.md  新旧项目对比汇报.md
docs/reports/: 2026-06-08-日报.md  glm-code review2.md  glm-code review4.md
docs/superpowers/plans/: 2026-06-17-sdlc-workflow.md
docs/superpowers/specs/: 2026-06-17-sdlc-workflow-design.md
frontend/: .env.example  README.md  docker-compose.yml
frontend/config/: models.md  openai-compat.md  system-prompts.md
host/: __init__.py
infra/: docker-compose.yml
infra/k8s/: 00-namespace.yaml  01-rbac.yaml  02-configmap.yaml  03-pvc.yaml  10-litellm.yaml  20-agents.yaml  30-orchestrator.yaml  40-mcp.yaml  50-langfuse.yaml  60-open-webui.yaml  70-network-policies.yaml  80-pdb.yaml  README.md  kustomization.yaml  secrets.yaml.example
infra/litellm/: Dockerfile  README.md  config.yaml
mcp_servers/: Dockerfile  __init__.py
mcp_servers/fetch/: __main__.py  server.py
mcp_servers/filesystem/: __main__.py  server.py
mcp_servers/shell/: __main__.py  server.py
observability/: __init__.py  langfuse_client.py  litellm_entrypoint.py  setup.py  tracing.py
orchestrator/: __init__.py  __main__.py  a2a_client.py  aggregator.py  classifier.py  executor.py  graph.py  openai_compat.py  sdlc_prompts.py  sdlc_workflow.py  sdlc_workspace.py  state.py
scripts/: README.md  __init__.py  _manual_sdlc.py  _probe_agents.py  _run_orchestrator.py  check_env.py  check_ports.ps1  healthcheck.py
tests/: __init__.py  conftest.py  test_p1_e2e.py  test_p2_1_e2e.py  test_p2_e2e.py  test_p3_e2e.py  test_p4_e2e.py  test_p5_e2e.py
tests/contract/: __init__.py  test_a2a_client.py  test_agent_card.py  test_aggregator.py  test_classifier.py  test_graph.py  test_k8s_manifests.py  test_langfuse_client.py  test_mcp_fetch.py  test_mcp_filesystem.py  test_mcp_shell.py  test_openai_compat.py  test_sdlc_prompts.py  test_sdlc_workflow.py  test_sdlc_workflow_utils.py  test_sdlc_workspace.py  test_state_workflow.py
workspace/samples/: calc.py  test_calc.py
