[project]
name = "a2a-prod"
version = "0.8.0"
description = "生产级 A2A 多 Agent 协作系统 — Google ADK + LiteLLM + a2a-sdk"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "a2a-prod team" }]

# ============================================================
# 核心依赖（P0+P1 阶段）
# ============================================================
dependencies = [
    # Agent 框架（ADK 原生支持 A2A 暴露）
    # 选 1.34.0 而非 2.x：避免 ADK 2.x 的 breaking change（session schema 不兼容）
    # ADK 1.34 的 [a2a] extra 锁定 a2a-sdk>=0.3.4,<0.4，与下方 a2a-sdk 范围一致
    # [extensions] 提供 LiteLlm（OpenAI 兼容客户端，用于走 LiteLLM Proxy）
    "google-adk[a2a,extensions]>=1.34.0,<1.35.0",

    # A2A 协议层（与 ADK 1.34 的 a2a extra 对齐；P2+ 阶段再评估升 v1.0）
    "a2a-sdk>=0.3.4,<0.4.0",

    # LLM 统一代理客户端（Agent 走 OpenAI 兼容接口调 LiteLLM）
    # ADK 1.34 [extensions] 传递 litellm 1.83.x，后者要求 openai==2.x；
    # 因此放开 openai 主版本上限，由 ADK 的 extensions extra 主导
    "openai>=2.24.0,<3.0.0",
    "httpx>=0.27.0,<0.29.0",

    # Web 框架（host 层 / health endpoint）
    # 注意：ADK 1.34 已传递 fastapi/uvicorn/starlette，此处显式声明便于独立升级
    "fastapi>=0.115.0,<0.135.0",
    "uvicorn[standard]>=0.32.0,<0.35.0",

    # 配置与日志
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "structlog>=24.4.0,<25.0.0",

    # 工具
    "python-dotenv>=1.0.0,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",            # 重试机制

    # P3: MCP 工具生态
    # 官方 MCP Python SDK（FastMCP 内置），Streamable HTTP transport
    "mcp>=1.5.0,<2.0.0",
    # fetch MCP server 用的 HTML→Markdown 转换器
    "html2text>=2024.2.26,<2025.0.0",
    # P4: Langfuse 可观测性（详见 ADR-0008）
    "langfuse>=3.0.0,<4.0.0",
    "openinference-instrumentation-google-adk>=0.1.15,<1.0.0",
    # P4: OTEL（langfuse SDK 间接依赖；显式声明便于版本锁）
    "opentelemetry-api>=1.33.1,<2.0.0",
    "opentelemetry-sdk>=1.33.1,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1,<2.0.0",
]

# ============================================================
# 开发依赖
# ============================================================
[project.optional-dependencies]
dev = [
    "ruff>=0.7.0,<0.9.0",
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    # P6: K8s 清单契约测试需要
    "pyyaml>=6.0.0,<7.0.0",
]

# ============================================================
# 工具配置
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv-prod",
    "build",
    "dist",
]

[tool.ruff.lint]
# 启用规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",  # 行长由 formatter 管
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# 第三方库缺类型时降级
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv-prod/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: end-to-end tests requiring docker-compose up",
    "p2_e2e: P2 orchestrator e2e tests (implies e2e + requires orchestrator up)",
    "p3_e2e: P3 MCP e2e tests (implies e2e + requires 3 mcp servers + 3 agents up)",
    "p4_e2e: P4 Langfuse e2e tests (implies e2e + requires langfuse-web + 3 agents up)",
    "p5_e2e: P5 Open WebUI e2e tests (implies e2e + requires open-webui + orchestrator up)",
    "p6_e2e: P6 K8s e2e tests (placeholder; K8s manifests are not run by pytest in P6)",
    "unit: pure unit tests",
    "contract: pure schema / contract tests (no docker, no network)",
]

[tool.uv]
# 使用 uv 管理依赖
managed = true

# ============================================================
# 构建系统
# ============================================================
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "host", "infra", "orchestrator"]
